<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scr_v"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/email_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/chk_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:text="@string/remember_me"
            app:layout_constraintStart_toStartOf="@+id/password_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="14dp"
            android:text="@string/login"
            android:textStyle="bold"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/password_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/chk_box" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/new_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/forgot_pass"
            app:layout_constraintStart_toStartOf="@+id/forgot_pass"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/emailButtonColor"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/sign_in_with_email"
            android:textColor="@color/emailTextColor"
            android:textSize="13sp"
            android:translationZ="6dp"
            app:cornerRadius="2dp"
            app:icon="@drawable/ic_email"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/google_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_user_text" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:buttonSize="wide"
            app:layout_constraintBottom_toBottomOf="@+id/email_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_btn"
            app:layout_constraintTop_toTopOf="@+id/email_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guest_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="18dp"
            android:text="Start as a Guest!"
            android:translationZ="8dp"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="@+id/google_btn"
            app:layout_constraintStart_toStartOf="@+id/email_btn"
            app:layout_constraintTop_toBottomOf="@+id/google_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>